# gnome15

./: .bzrignore  .gitignore  .project  .pydevproject  AUTHORS  Makefile.am  NEWS  README  README.md  b.sh  build-po.sh  build-pot.sh  configure.ac  configure.in  dbus-hello-world.sh  debug-g15-config.sh  debug.sh  lg4l-dkms_0.1-0ubuntu1~ppa1n_all.deb  lg4l-linux_0.1-0ubuntu1~ppa1n_all.deb  lg4l_0.1-0ubuntu1~ppa1n_amd64.build  mksvgheaders.py  rel-gnome15
data/autostart/: Makefile.am  g15-indicator.desktop.in  gnome15.desktop.in
data/glade/: Makefile.am  accounts.ui  colorpicker.glade  driver_g15direct.glade  driver_g19direct.glade  driver_g19direct.ui  driver_g930.glade  driver_gtk.glade  driver_kernel.glade  g15-config.glade  macro-editor.glade  macro-editor.ui  password.glade  script-editor.glade
g19d/: Makefile.am  README  configure.in  g19daemon
g19d/debian/: changelog  control  copyright  g19d.default  init.d  postinst  prerm
g19d/g19d/: Makefile.am  g19.py  g19_globals.py  g19_globals.py.in  g19_receivers.py  globals.py
gnome15/: AUTHORS  ChangeLog  Makefile.am  NEWS  TRANSLATION_PROGRESS.txt  b.sh  configure.ac  configure.in  debug-g15-config.sh  debug-g15-systemtray.sh  debug.sh  mksvgheaders.py  objects.dot
gnome15-gnome-plugins/: configure.in
gnome15-gnome-plugins/debian/: changelog  control  copyright  postinst
gnome15-gnome-plugins/src/: Makefile.am
gnome15-gnome-plugins/src/cal/: Makefile.am  cal.py
gnome15-gnome-plugins/src/indicator-me/: indicator-me.py
gnome15-gnome-plugins/src/indicator-messages/: indicator-messages.py
gnome15-gnome-plugins/src/lcdbiff/: lcdbiff.py
gnome15-gnome-plugins/src/screensaver/: screensaver.py
gnome15-iconpack/: AUTHORS  Makefile.am  NEWS  README  configure.ac  configure.in
gnome15-iconpack/AwOken/status/: Makefile.am
gnome15-iconpack/HighContrastLargePrintInverse/apps/: Makefile.am
gnome15-iconpack/debian/: changelog  control  copyright  gnome15-accessibility-icons.install  gnome15-accessibility-icons.postinst  gnome15-awoken-icons.install  gnome15-awoken-icons.postinst  gnome15-elementary-icons.install  gnome15-elementary-icons.postinst  gnome15-mono-icons.install  gnome15-mono-icons.postinst
gnome15-impulse15/: AUTHORS  Makefile.am  NEWS  README  b.sh  build-po.sh  build-pot.sh  configure.ac  configure.in  libtool
gnome15-impulse15/debian/: changelog  control  manpage.xml
gnome15-impulse15/impulse15/: Makefile.am  impulse15.glade  impulse15.py
gnome15-impulse15/impulse15/default/: Makefile.am
gnome15-impulse15/impulse15/i18n/: impulse15.en_GB.po  impulse15.pot
gnome15-impulse15/impulse15/themes/: Makefile.am
gnome15-impulse15/m4/: ltversion.m4
gnome15-impulse15/native/: Impulse.c  Impulse.lo  impulse_la-impulsemodule.lo  impulsemodule.c
gnome15-impulse15/native/.libs/: impulse.la  impulse.lai  libimpulse.la  libimpulse.lai  libimpulse.so.0  libimpulse.so.0.1.0
gnome15-indicator/: AUTHORS  Makefile.am  NEWS  README  configure.ac  configure.in  g15-indicator  g15-indicator.1  g15-indicator.desktop
gnome15-indicator/debian/: changelog  control  postinst
gnome15-kde-plugins/window-thumbnail/src/: CMakeLists.txt  fbdevoutput.cpp  fbdevoutput.h  gnome15thumbw.desktop  gnome15thumbw_config.desktop  lg-window-thumbnail.cpp  lg-window-thumbnail.h  lg-window-thumbnail_config.cpp  lg-window-thumbnail_config.h  lg-window-thumbnail_config.ui  outputhandler.cpp  outputhandler.h  sharedmemoryoutput.cpp  sharedmemoryoutput.h
gnome15-panel-applet/: Makefile.am  README  configure.in  g15-applet
gnome15-panel-applet/debian/: changelog  control  postinst
gnome15-panel-applet/m4/: ax_python_devel.m4
gnome15-plugins/: AUTHORS  Makefile.am  NEWS  README  b.sh  build-po.sh  build-pot.sh  configure.ac  configure.in  x.xml
gnome15-plugins/debian/: changelog  control  copyright  gnome15-base-plugins.install  gnome15-gnome-plugins.install  gnome15-ubuntu-plugins.install
gnome15-plugins/src/: Makefile.am
gnome15-plugins/src/background/: Makefile.am  background.glade  background.py
gnome15-plugins/src/cairo-clock/: Makefile.am  cairo-clock.glade  cairo-clock.py
gnome15-plugins/src/cal/: Makefile.am  cal.py
gnome15-plugins/src/cal-evolution/: Makefile.am  cal-evolution.py
gnome15-plugins/src/cal-google/: Makefile.am  cal-google.py  iso8601.py
gnome15-plugins/src/clock/: Makefile.am  clock.glade  clock.py
gnome15-plugins/src/debug/: Makefile.am  debug.py
gnome15-plugins/src/display/: Makefile.am  display.py
gnome15-plugins/src/fx/: Makefile.am  fx.glade  fx.py
gnome15-plugins/src/g15daemon-server/: Makefile.am  g15daemon-server.glade  g15daemon-server.py
gnome15-plugins/src/google-analytics/: Makefile.am  google-analytics.glade  google-analytics.py
gnome15-plugins/src/im/: Makefile.am  im.py
gnome15-plugins/src/indicator-me/: Makefile.am  indicator-me.py
gnome15-plugins/src/indicator-messages/: Makefile.am  indicator-messages.py
gnome15-plugins/src/keyhelp/: Makefile.am  keyhelp.py
gnome15-plugins/src/lcdbiff/: Makefile.am  lcdbiff.glade  lcdbiff.py  password.glade
gnome15-plugins/src/lcdshot/: Makefile.am  lcdshot.glade  lcdshot.py
gnome15-plugins/src/lens/: Makefile.am  gnome15.place  lens.py
gnome15-plugins/src/macro-recorder/: Makefile.am  macro-recorder.py
gnome15-plugins/src/macros/: Makefile.am  macros.py
gnome15-plugins/src/mediaplayer/: Makefile.am  mediaplayer.py  oldvideoplayer.py
gnome15-plugins/src/menu/: Makefile.am  menu.py
gnome15-plugins/src/mounts/: Makefile.am  mounts.glade  mounts.py
gnome15-sandbox-plugins/: README  configure.in
gnome15-sandbox-plugins/src/: Makefile.am
gnome15/debian/: changelog  control  copyright  gnome15-g15daemon.install  gnome15-g19d.install  gnome15-g19direct.install  gnome15-gtk.install  gnome15-kernel.default  gnome15-kernel.init.d  gnome15-kernel.install  gnome15-kernel.udev  gnome15.dirs  gnome15.install  gnome15.postinst  rules
gnome15/gnome15-0.6.6/: README
gnome15/pylibg19/: AUTHORS  NEWS  README  setup.py
gnome15/src/: Makefile.am
src/libimpulse/: Makefile.am
src/plugins/: Makefile.am
(+1354 files in other folders)
